--- a/index.html
+++ b/index.html
@@ -611,4 +611,4 @@
                 <span>Dallas, TX</span>
             </div>
             <div style="margin-top: 10px;">
-                <strong>www.sto
+                <strong>www.stocadvisory.com
