--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div style="text-align: center; margin: 30px 0;">
                 <img src="1769107333729_image.png" alt="STOC Advisory Locations" style="width: 100%; max-width: 800px; margin: 0 auto; display: block;"/>
                 <div style="margin-top: 15px; font-size: 0.85em; line-height: 1.6; color: #555; font-style: italic; text-align: center;">
-                    Global team of 30+ professionals with primary offices in Baltimore, MD and Edina, MN.
+                    Global team of 40+ professionals with primary offices in Baltimore (MD), Nashville (TN) and Edina (MN).
                 </div>
             </div>
         </div>
